--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -12,14 +12,20 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.13",
+    "expo-camera": "~13.4.4",
+    "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-svg-uri": "^1.2.3",
-    "expo-camera": "~13.4.4",
-    "expo-media-library": "~15.4.1"
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
