ADD: build on expo

--- a/AwesomeProject/app.json
+++ b/AwesomeProject/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.karinapelykh.AwesomeProject"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c089d823-8c63-4027-b294-9e9d9160e78c"
+      }
     }
   }
 }
