--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -12,11 +12,13 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
     "expo-camera": "~13.4.4",
+    "expo-dev-client": "~2.4.11",
     "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
