--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -30,7 +30,9 @@
     "react-native-maps": "1.7.1",
     "react-native-svg-uri": "^1.2.3",
     "react-redux": "^8.1.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
